minitrace-macro/tests/trace/ui/err/013-optional-is-not-ident.rs
use minitrace::trace;

#[trace(name = "a", some::unknown=true)]
fn f() {}

fn main() {}
